--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html, body {
 }
 
 #header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
     background-color: #2980b9;
 }
@@ -23,7 +27,18 @@ html, body {
 }
 
 #header .subtitle {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+}
+
+#inSearch {
+    font-family: arial;
+    font-size: 1rem;
+    margin: 20px;
+    width: 30%;
+    height: 20px;
+    border-radius: 3px;
+    padding: 7px 10px;
+    border: solid 2px white;;
 }
 
 #main {
@@ -38,16 +53,20 @@ html, body {
     font-family: "Muli";
     width: 20%;
     margin-left: 10px;
+}
+
+#main .sidebar .description {
     border: solid 1px gray;
     border-radius: 3px;
     padding: 0 10px;
+    margin-bottom: 1rem;
 }
 
 #main .levelbar {
     width: 75%;
 }
 
-table {
+#levelTable {
     margin-left: 20px;
 }
 
@@ -72,22 +91,38 @@ tr:hover {
     cursor: pointer;
     -ms-transform: translateY(-2px);
     -webkit-transform: translateY(-2px);
-    /*transform: translateY(-2px);*/
-    box-shadow: 0 4px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
+    box-shadow: 0 4px rgba(0, 0, 0, 0.1);
 }
 
-table {
+#levelTable {
     border-collapse: collapse;
     width: 100%;
     text-align: center;
 }
 
-table .icon {
+#levelTable .icon {
     width: 50px;
     height: 50px;
     margin-top: 35px;
     border-radius: 100%;
     margin: 0 auto;
+}
+
+footer {
+    font-family: "Raleway";
+    text-align: center;
+    color: black;
+    margin-bottom: 5px;
+}
+
+footer a, footer a:active {
+    color: black;
+    text-decoration: underline;
+}
+
+footer a:hover {
+    color: gray;
 }
 
 @media (max-width: 1000px) {
@@ -100,7 +135,7 @@ table .icon {
         width: 100%!important;
     }
 
-    table {
+    #levelTable {
         margin: 0;
     }
 
@@ -108,7 +143,7 @@ table .icon {
         font-size: 1.7rem;
     }
     #header .subtitle {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
     }
 }
 
@@ -124,4 +159,8 @@ table .icon {
     .level {
         padding-right: 5px;
     }
+}
+
+.invisible {
+    display: none!important
 }
